# autonomous-vibe

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  ROADMAP.md
.claude/: settings.json
.claude/skills/dev-loop/: SKILL.md
.claude/skills/running-panda/: SKILL.md  launch.sh
.github/workflows/: ci.yml  release.yml
desktop/: .gitignore
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: README.md
desktop/src-tauri/resources/python/: .installed
desktop/src-tauri/resources/slicer/: .installed  orca-sandbox.sb  orcaslicer-x86_64-apple-darwin
desktop/src-tauri/src/: asset_protocol.rs  lib.rs  main.rs  menu.rs  paths.rs  skills.rs  state.rs
desktop/src-tauri/src/commands/: app.rs  catalog.rs  chat.rs  claude_driver.rs  claude_stream_debug.rs  cloud.rs  files.rs  mod.rs  printer.rs  project.rs  slicer.rs  snapshot.rs  social.rs  step.rs  update.rs  versions.rs
desktop/src-tauri/src/ipc/: error.rs  mod.rs  types.rs
docs/: future-work-version-control.md  panda-interfaces-CHANGES.md  panda-interfaces.md
docs/superpowers/specs/: 2026-06-03-sidebar-project-tree-design.md  2026-06-11-block-auth-mode-switch-while-processing-design.md  2026-06-12-awaiting-answer-indicator-design.md  2026-06-15-inline-reasoning-activity-design.md  2026-06-17-model-switcher-design.md
scripts/: dev.sh  reset-onboarding.sh
skills/cad-viewer/: SKILL.md
skills/cad-viewer/scripts/viewer/scripts/: ensure-serve.mjs
skills/cadcode/: SKILL.md  requirements.txt
skills/cadcode/agents/: claude-code.md
skills/cadcode/assets/: example_desk_valet.py  example_gopro_mount.py  example_magsafe_stand.py  example_snap_lid_box.py
skills/cadcode/cadlib/: __init__.py  cutouts.py  fits.py  mounting.py  styling.py
skills/cadcode/recipes/: electronics_enclosure.py  magnetic_lid_box.py
skills/cadcode/references/: assembly.md  cadquery-modeling.md  component-integration.md  hobbyist-defaults.md  industrial-design.md  project-structure.md  repair-loop.md
skills/cadcode/references/patterns/: bearing-seat.md  cable-channel.md  dovetail-slide.md  draft-angle.md  fillet-stress-relief.md  heat-set-insert-pocket.md  magnet-pocket.md  nut-trap.md  overhang-relief.md  press-fit-pocket.md  print-in-place.md  print-orientation.md  rib-stiffener.md  screw-boss.md  snap-fit-cantilever.md  surface-continuity.md  unified-radius.md  wall-thickness-rules.md
skills/cadcode/scripts/cad/: cli.py
skills/cadcode/scripts/check/: cli.py
skills/cadcode/scripts/common/: runner.py
skills/cadcode/scripts/review/: cli.py
skills/cadcode/templates/project_skeleton/: main.py  spec.md  validation.py
skills/cadcode/tests/: conftest.py  test_cadlib.py  test_skill.py
skills/model-crawl/: SKILL.md
skills/model-crawl/references/: generic-site-scraping.md  printables-graphql-api.md
skills/model-crawl/scripts/: common.py  fetch_model_folder.py  site_generic.py  site_printables.py
skills/shape-analysis/: SKILL.md
viewer/: package-lock.json  package.json  vite.config.mjs
viewer/scripts/: run-tests.mjs
viewer/src/client/: main.jsx
viewer/src/client/components/: AppErrorBoundary.jsx  CadViewer.js  CadWorkspace.js  ImplicitCadViewer.js  WindowMenuBar.jsx
viewer/src/client/components/chat/: ActionButtons.jsx  ArtifactBadge.jsx  AuthModeControl.jsx  ChatCodeBlock.jsx  ChatCopyButton.jsx  ChatErrorContent.jsx  ChatHistory.jsx  ChatInput.jsx  ChatSidebar.jsx  ChatStatusLine.jsx  ChatTurn.jsx  ClaudeSetupDialog.jsx  Markdown.jsx  ModelControl.jsx  PandaReauthBanner.jsx  PlanBlock.jsx  PreflightModal.jsx  QuestionCard.jsx  ThinkingSummary.jsx  ToolUseBlock.jsx  TurnActivity.jsx  TurnReasoning.jsx  actionButtonsHelpers.js  activityLabels.js  attachments.js  cadRefEvents.js  chatHistoryModel.js  chatInputHelpers.js  chatTheme.js  highlightContext.js  liveDuration.js  modelChoices.js  preflightItems.js  prose.css  remarkCallouts.js  upgradeError.js  useStuck.js
viewer/src/client/components/onboarding/: ClaudeCheckStep.jsx  ClaudeLoginStep.jsx  DoneStep.jsx  FilamentStep.jsx  OnboardingWizard.jsx  PrinterStep.jsx  SlicerCheckStep.jsx  WelcomeScreen.jsx  onboardingHelpers.js
viewer/src/client/components/printer/: AddPrinterDialog.jsx
viewer/src/client/components/project/: ProjectMenu.jsx  PublishSignInDialog.jsx  PublishTokenDialog.jsx
viewer/src/client/components/ui/: textarea.jsx  toast.jsx
viewer/src/client/components/update/: UpdateNotifier.jsx
viewer/src/client/components/viewer/: BuildBlueprintOverlay.jsx  buildManifest.js  freeTumble.js  freeTumble.test.js  materializeEffect.js
viewer/src/client/components/viewer3d/: AppearanceMenu.tsx  BloomEffects.tsx  BuildBlueprintOverlay.jsx  CanvasErrorBoundary.tsx  DrawingOverlay.jsx  ExplodePanel.tsx  ExplodeRig.tsx  GroundGrid.tsx  MeasureLayer.tsx  MeasurePanel.tsx  ModelCanvas.tsx  ReflectiveFloor.tsx  ScaleBox.tsx  SectionCap.tsx  SectionPanel.tsx  SectionRig.tsx  StlModel.tsx  StudioLights.tsx  ViewerTools.tsx  appearance.store.ts  crossSection.store.ts  edgeTable.ts  explode.store.ts  explode.ts  explodeGeometry.ts  featureEdges.ts  labelShells.ts  materialPresets.ts  measure.store.ts  meshShells.ts  partColors.ts  section.ts  sectionPlane.ts  sectionSolid.ts  useMediaQuery.ts  useSectionSolid.ts  useViewerDrawingOverlay.js  useViewerTheme.ts
viewer/src/client/components/workbench/: AccountScreen.jsx  CadRenderPane.js  CadWorkspaceHome.js  CadWorkspaceTopBar.js  DrawingToolbar.js  (+19 more)
viewer/src/client/lib/: autopilot.js  cadCatalogBackendTauri.js  cadCatalogBackendTauri.test.ts  transport.test.ts  transport.ts
viewer/src/client/store/: chat.js  claudeSetup.js  projects.ts
viewer/src/client/styles/: globals.css
viewer/src/client/ui/: colorScheme.js
viewer/src/client/workbench/: breadcrumb.js  breadcrumb.test.js  chatLayout.js  chatLayout.test.js  constants.js  fileSheetSections.js  fileSheetSections.test.js  gcode-load-repro.test.mjs  implicitGraphicsSettings.js  isPrintableModelEntry.js  isPrintableModelEntry.test.js  persistence.js  sidebar.js  sidebar.test.js
(+34 files in other folders)
