[package]
name = "panda-desktop"
version = "0.1.3"
description = "Panda — consumer desktop app for prompt-to-print 3D"
authors = ["dee"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "panda_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "panda-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Auto-update: checks the GitHub Releases `latest.json` endpoint, verifies the
# minisign signature against the pubkey in tauri.conf.json, downloads and
# installs the new bundle. Desktop-only (no-op on mobile). See lib.rs setup.
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", default-features = false }
walkdir = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
directories = "5"
once_cell = "1"
which = "6"
sha2 = "0.10"
hex = "0.4"
open = "5"
# Percent-decode/-encode the custom `pandaasset://` URI scheme paths used to
# stream the open project's files to the webview (see src/asset_protocol.rs).
percent-encoding = "2"

# Track G: real slicer + printer wiring.
# mDNS discovery for Bambu printers on the LAN.
mdns-sd = "0.11"
# FTPS upload to the printer's `/cache/` directory (implicit TLS, port 990).
# Bambu printers use self-signed certs; the impl injects a rustls
# ClientConfig that disables cert verification.
suppaftp = { version = "6", default-features = false, features = ["rustls"] }
# Async MQTT client for the `device/{serial}/{request,report}` topics.
# Uses the same rustls backend; we inject a no-verify ClientConfig for
# self-signed Bambu printer certs.
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
# Parse the printer's TLS leaf cert and pull the Common Name (= serial).
x509-parser = "0.16"

# Track I: fetch the upstream Claude Code installer script over HTTPS. Already
# pulled in transitively by Tauri's bundled stack; pinned here as a direct
# dep so the `app_install_claude_code` command can call it without leaning on
# someone else's feature flags. rustls backend matches the rest of the app
# (no system OpenSSL needed).
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

[features]
# this feature is used for production builds or when a dev server is not specified
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
