[package]
name = "panda-desktop"
version = "0.1.0"
description = "Panda — consumer desktop app for prompt-to-print 3D"
authors = ["dee"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "panda_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "panda-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# NB: no `devtools` feature. In debug builds Tauri enables the webview inspector
# automatically; the `devtools` feature would also enable it in *release*
# (production) builds, exposing right-click → Inspect Element to end users. We
# want devtools in dev only, so we omit the feature and gate the programmatic
# `open_devtools()` call behind `cfg(debug_assertions)` in lib.rs.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Auto-update: checks the GitHub Releases `latest.json` endpoint, verifies the
# minisign signature against the pubkey in tauri.conf.json, downloads and
# installs the new bundle. Desktop-only (no-op on mobile). See lib.rs setup.
tauri-plugin-updater = "2"
# Single-instance: focuses the existing window and de-dupes launches when the
# user reopens the app. See lib.rs setup.
tauri-plugin-single-instance = "2"
# Registers the app as the OS handler for the `myide://` scheme so the panda-
# social browser sign-in flow can hand a one-time code back via deep link. See
# lib.rs setup and commands/social.rs.
tauri-plugin-deep-link = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", default-features = false }
walkdir = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
directories = "5"
once_cell = "1"
which = "6"
hex = "0.4"
# md5 of the sliced `.gcode.3mf` for the Bambu LAN `project_file` handoff — the
# firmware-validated start path expects the project digest (uppercase) in the
# MQTT payload (see commands/printer.rs, `skills/bambu-labs` protocol notes).
md5 = "0.7"
# `shellexecute-on-windows`: launch URLs/paths via `ShellExecuteW` instead of
# `cmd /c start`, which mangles query strings (the `&` separators and `%`-encoded
# `redirect_uri` in the sign-in URL) and bounces the browser from `/desktop-login`
# to `/login` (see commands/social.rs `social_login`).
open = { version = "5", features = ["shellexecute-on-windows"] }
# Percent-decode/-encode the custom `pandaasset://` URI scheme paths used to
# stream the open project's files to the webview (see src/asset_protocol.rs).
percent-encoding = "2"
# Decode base64 reference images the chat composer attaches over IPC, before
# persisting them into the project workspace (see commands/chat.rs). Also used
# in commands/cloud.rs to decode the `uid`/`exp` claims out of the cloud
# accessToken JWT payload (own token's middle segment, signature never verified).
base64 = "0.22"

# Track G: real slicer + printer wiring.
# SSDP (UDP multicast) discovery — the path Bambu Studio/OrcaSlicer use and
# the one real printers actually answer on the LAN. `socket2` gives us the
# SO_REUSEADDR/SO_REUSEPORT + multicast-join control std `UdpSocket` lacks.
socket2 = "0.5"
# mDNS discovery for Bambu printers on the LAN — kept as a best-effort
# secondary path; most firmware does not advertise over Bonjour.
mdns-sd = "0.11"
# FTPS upload to the printer's `/cache/` directory (implicit TLS, port 990).
# Bambu printers use self-signed certs; the impl injects a rustls
# ClientConfig that disables cert verification.
suppaftp = { version = "6", default-features = false, features = ["rustls"] }
# Async MQTT client for the `device/{serial}/{request,report}` topics.
# Uses the same rustls backend; we inject a no-verify ClientConfig for
# self-signed Bambu printer certs.
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
# Parse the printer's TLS leaf cert and pull the Common Name (= serial).
x509-parser = "0.16"

# Track I: fetch the upstream Claude Code installer script over HTTPS. Already
# pulled in transitively by Tauri's bundled stack; pinned here as a direct
# dep so the `app_install_claude_code` command can call it without leaning on
# someone else's feature flags. rustls backend matches the rest of the app
# (no system OpenSSL needed). `json` powers the Bambu cloud REST calls
# (login / device bind / print-job) in `commands/cloud.rs`.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "multipart"] }

# Zip a finished project workspace into the single-file upload the panda-social
# design-import API expects (multipart `file`). Already resolved transitively by
# Tauri's stack; pinned here as a direct dep for commands/social.rs. `deflate`
# keeps STEP/STL zips comfortably under the API's ≤50 MB recommendation.
zip = { version = "4", default-features = false, features = ["deflate"] }
# PKCE S256 challenge (SHA-256) for the panda-social browser sign-in flow
# (commands/social.rs).
sha2 = "0.10"

# Bambu cloud printing (commands/cloud.rs).
# Real CA trust anchors for the *cloud* MQTT broker (us.mqtt.bambulab.com),
# which — unlike the LAN printer — presents a normal CA-signed cert. The LAN
# path keeps its no-verify config for self-signed printer certs.
webpki-roots = "0.26"

# Claude Code sign-in: `claude setup-token` is an interactive command that
# opens a browser OAuth flow and prints a long-lived token. It detects a TTY
# and misbehaves under plain pipes, so `app_login_claude` runs it inside a real
# pseudo-terminal. portable-pty wraps ConPTY on Windows and openpty elsewhere.
portable-pty = "0.8"

[features]
# this feature is used for production builds or when a dev server is not specified
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
